Overflow fix

--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    overflow-x: hidden;
 
     .video-container{
         video{
@@ -15,6 +16,7 @@
             display: flex;
             width: 90%;
             justify-content: center;
+            
             a{
                 margin:-0% 2% 15%;
             }
@@ -58,7 +60,7 @@
     margin: 8% auto 0%;
     align-items: center;
     text-shadow: 0px 0px 1px var(--color-title);
-    
+
     h2{
         margin: 0%;
         width: 40%;
@@ -112,7 +114,7 @@
     text-shadow: 0px 0px 1px var(--color-title);
     display: flex;
     justify-content: flex-end;
-
+    overflow: hidden;
     h2{
         width: 50%;
         .app-button{
@@ -137,6 +139,7 @@
     }
 
     video{
+        overflow: hidden;
         width: 100%;
         position: absolute;
         z-index: -1;
@@ -150,7 +153,8 @@
     align-items: center;
     text-shadow: 0px 0px 1px var(--color-title);
     display: flex;
-    
+    z-index: -2;
+
     h2{
         width: 60%;
         .app-button{
@@ -180,6 +184,7 @@
         z-index: -1;
         right: 0;
         transform: rotate(5deg);
+        overflow-x: hidden;
     }
 }
 
@@ -234,22 +239,23 @@
     .ball-system{
         justify-content: center;
         margin:10% 0% 40%;
-        
+        position: relative;
+        overflow: hidden;
         h2{
             width: 80%;
             margin-bottom: 20%;
         }
-    
+        
         video{
-            width: 250%;
-
-            z-index: -1;
+            width: 220%;
             margin-top: 10%;
+            padding: 1%;
         }
     }
 
     .transparency-hero{
         justify-content: center;
+        overflow: hidden;
         
         h2{
             width: 80%;
@@ -257,11 +263,10 @@
         }
         
         img{
-            margin: 30% 0%;
+            margin: 1% 9%;
             height: 70vh;
             position: absolute;
             z-index: -1;
-            right: 0;
         }
     }
 }
